[gd_scene load_steps=3 format=3 uid="uid://blccym1xt7yic"]

[ext_resource type="Theme" uid="uid://c7ymobu6xvq2m" path="res://Theme/ThemeSample.tres" id="1_8rjjn"]
[ext_resource type="Script" path="res://Level/Stair/StairUI_getSignal.gd" id="2_e488u"]

[node name="StairUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8rjjn")
script = ExtResource("2_e488u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 240.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "階段"

[node name="Yes" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../No")
focus_neighbor_bottom = NodePath("../No")
text = "降りる"

[node name="No" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Yes")
focus_neighbor_bottom = NodePath("../Yes")
text = "そのまま"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -154.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer2"]
layout_mode = 2
text = "この階段を降りると、次のフロアに出ます。
このまま下に降りますか？"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/No" to="." method="_on_no_pressed"]
